--- a/app/src/main/res/layout/activity_new_merchant.xml
+++ b/app/src/main/res/layout/activity_new_merchant.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="20sp"
     tools:context=".merchant.NewMerchantActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Set Up Your First Merchant"
+        android:textSize="24sp"
+        android:textColor="@color/colorBlack"
+        android:gravity="center"
+        android:id="@+id/tvNewMerchant"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Merchant Name"
+        android:id="@+id/etNewMerchant"
+        android:layout_marginVertical="20dp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnNewMerchant"
+        android:text="Set Up Merchant"/>
+</LinearLayout>
