--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_margin="5dp"
+    android:gravity="center_vertical"
     android:padding="5dp">
 
     <LinearLayout
@@ -29,6 +30,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"
             android:id="@+id/tvRowProductName"/>
 
         <TextView
@@ -42,6 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/tvRowProductStock"
+        android:gravity="center_vertical"
         android:layout_weight="2"/>
 
 </LinearLayout>
