--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/tlHome"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.SearchView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            app:queryHint="Search Here"
+            app:iconifiedByDefault="false"
+            android:id="@+id/svHomeSearch"/>
+
+    </LinearLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -31,5 +47,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_border"
         android:text="Check Out"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:id="@+id/btnHomeAddItem"/>
 </LinearLayout>
