--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_border"
-        android:text="Check Out"
+        android:text="0 Item Rp 0,00"
         android:layout_margin="10dp"
         android:id="@+id/btnHomeAddItem"/>
 </LinearLayout>
