--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000000</color>
     <color name="colorTransparent">#0000</color>
+    <color name="colorGrey">#4f5c4e</color>
+    <color name="colorSilver">#bdc3c7</color>
 </resources>
