--- a/app/src/main/res/layout/row_customer.xml
+++ b/app/src/main/res/layout/row_customer.xml
@@ -8,7 +8,8 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:src="@drawable/user"/>
 
     <TextView
         android:layout_width="match_parent"
