--- a/app/src/main/res/layout/activity_discount.xml
+++ b/app/src/main/res/layout/activity_discount.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Cash Discount"
+            android:text="Percentage Discount"
             android:gravity="center_horizontal"
             android:id="@+id/tvDiscountPercentage"
             android:textSize="16sp"/>
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/etDiscountPercentage"
-            android:hint="Amount"
+            android:hint="Percentage"
             android:gravity="center"
             android:inputType="number"
             android:layout_marginHorizontal="50dp"/>
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Cash Discount"
+            android:text="Total After Discount"
             android:gravity="center_horizontal"
             android:id="@+id/tvDiscountNewTotal"
             android:textSize="16sp"/>
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvDiscountNewTotalContent"
             android:gravity="center"
-            android:textSize="28sp"
+            android:textSize="32sp"
             android:textColor="@color/colorBlack"
             android:layout_marginHorizontal="50dp"/>
     </LinearLayout>
