--- a/app/src/main/res/layout/row_cart.xml
+++ b/app/src/main/res/layout/row_cart.xml
@@ -19,7 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="6">
+        android:layout_weight="5">
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,9 +41,9 @@
         android:layout_height="match_parent"
         android:textColor="@color/colorBlack"
         android:layout_margin="5dp"
-        android:textSize="16sp"
-        android:layout_weight="3"
-        android:gravity="center_vertical"
+        android:textSize="14sp"
+        android:layout_weight="4"
+        android:gravity="center_vertical |end"
         android:id="@+id/tvRowCartTotalPrice"/>
 
 </LinearLayout>
