--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -17,7 +17,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:id="@+id/ivRowProductImage"/>
+            android:id="@+id/ivRowProductImage"
+            android:src="@drawable/default_image"/>
 
     </LinearLayout>
 
