- Added Payment Pending Feature - Enhancement UI

--- a/app/src/main/res/layout/activity_new_category.xml
+++ b/app/src/main/res/layout/activity_new_category.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".product.NewCategory">
+    tools:context=".product.NewCategory"
+    android:padding="10dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnNewCategory"
+        android:background="@drawable/button_border_fill"
         android:text="Create"/>
 
 
