--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -10,7 +10,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="4"
         android:id="@+id/rvCart"/>
 
     <TextView
@@ -28,7 +29,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvCartDiscount"
-        android:text="No Discount"
+        android:gravity="end"
+        android:padding="10dp"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvCartTax"
         android:gravity="end"
         android:padding="10dp"
         android:textSize="16sp"/>
@@ -53,7 +61,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="bottom">
 
@@ -62,15 +71,16 @@
             android:layout_height="50dp"
             android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="10dp"
+                android:layout_weight="2"
                 android:layout_margin="5dp"
-                android:src="@drawable/dots"
+                android:gravity="center"
+                android:text="..."
+                android:textStyle="bold"
                 android:id="@+id/ivCartMoreOptions"
-                android:background="@color/colorSilver"/>
+                android:background="@drawable/button_border"/>
 
             <Button
                 android:layout_width="0dp"
@@ -78,7 +88,7 @@
                 android:background="@drawable/button_border_fill"
                 android:layout_margin="5dp"
                 android:padding="10dp"
-                android:layout_weight="9"
+                android:layout_weight="8"
                 android:textColor="@color/colorWhite"
                 android:id="@+id/btnCart"/>
 
