--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -8,19 +8,19 @@
     android:orientation="vertical"
     tools:context=".checkout.CheckOutActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="36sp"
-        android:gravity="center"
-        android:textColor="@color/colorBlack"
-        android:text="Check Out"
-        android:id="@+id/tvCheckOutTitle"/>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="36sp"-->
+<!--        android:gravity="center"-->
+<!--        android:textColor="@color/colorBlack"-->
+<!--        android:text="Check Out"-->
+<!--        android:id="@+id/tvCheckOutTitle"/>-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorBlack"/>
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:background="@color/colorBlack"/>-->
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="30dp">
+                android:layout_marginTop="20dp">
 
                 <EditText
                     android:layout_width="match_parent"
@@ -95,38 +95,50 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:id="@+id/tvPaymentMethodTitle"
-                android:background="@color/colorSilver"
-                android:text="Payment Method"/>
+                android:layout_margin="5dp"
+                android:elevation="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:id="@+id/tvPaymentMethodTitle"
+                        android:text="Payment Method"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginVertical="10dp">
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_border"
-                    android:text="Cash"
-                    android:layout_margin="5dp"
-                    android:id="@+id/btnCheckOutCash"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginVertical="10dp">
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/button_border"
+                            android:text="Cash"
+                            android:layout_margin="5dp"
+                            android:id="@+id/btnCheckOutCash"/>
 
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_border"
-                    android:text="Card"
-                    android:layout_margin="5dp"
-                    android:id="@+id/btnCheckOutCard"/>
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/button_border"
+                            android:text="Card"
+                            android:layout_margin="5dp"
+                            android:id="@+id/btnCheckOutCard"/>
 
-            </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
