--- a/app/src/main/res/layout/activity_detail_transaction.xml
+++ b/app/src/main/res/layout/activity_detail_transaction.xml
@@ -9,14 +9,27 @@
     android:padding="10dp"
     tools:context=".transaction.DetailTransactionActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="32sp"
-        android:textColor="@color/colorBlack"
-        android:id="@+id/tvDetailTransactionTotalPrice"/>
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="32sp"
+            android:textColor="@color/colorBlack"
+            android:id="@+id/tvDetailTransactionTotalPrice"/>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_gravity="center"
+            android:id="@+id/ivDetailTransactionStatus"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -54,40 +67,16 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tlDetailTransaction"/>
+
+    <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:id="@+id/rvDetailTransaction"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvDetailTransactionSubTotal"
-        android:text="Sub Total : 0"
-        android:gravity="end"
-        android:padding="10dp"
-        android:textSize="16sp"
-        android:visibility="gone"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvDetailTransactionDiscount"
-        android:text="No Discount"
-        android:gravity="end"
-        android:padding="10dp"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvDetailTransactionNote"
-        android:gravity="end"
-        android:padding="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorGrey"/>
+        android:id="@+id/vpDetailTransaction"/>
 
     <Button
         android:layout_width="match_parent"
@@ -97,6 +86,15 @@
         android:text="Receipt"
         android:background="@drawable/button_border"
         android:id="@+id/btnDetailTransactionReceipt"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:textColor="@color/colorPrimary"
+        android:text="Confirm Payment"
+        android:background="@drawable/button_border"
+        android:id="@+id/btnDetailTransactionConfirmPayment"/>
 
     <Button
         android:layout_width="match_parent"
