--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -3,6 +3,7 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layoutReceipt"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ProgressBar
@@ -26,7 +27,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="10dp"
-                android:id="@+id/layoutReceipt"
                 android:layout_marginBottom="100dp"
                 tools:context=".checkout.ReceiptActivity">
 
@@ -58,6 +58,28 @@
                     android:text="081234123412"
                     android:id="@+id/tvReceiptMerchantTelp"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/user"
+                        android:layout_marginEnd="10dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="16sp"
+                        android:text="Christopher"
+                        android:id="@+id/tvReceiptCashier"/>
+
+                </LinearLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
@@ -70,14 +92,28 @@
                     android:layout_weight="1"
                     android:id="@+id/rvReceipt"/>
 
-                <TextView
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvReceiptNote"
-                    android:gravity="end"
-                    android:padding="10dp"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorGrey"/>
+                    android:orientation="horizontal"
+                    android:id="@+id/layoutReceiptNote">
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:padding="5dp"
+                        android:src="@drawable/note"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tvReceiptNote"
+                        android:padding="5dp"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorGrey"/>
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -93,9 +129,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
+                        android:id="@+id/tvReceiptSubTotalTitle"
                         android:textColor="@color/colorBlack"
                         android:text="SubTotal:"/>
 
@@ -106,9 +143,10 @@
                         android:id="@+id/tvReceiptSubTotal"
                         android:text="Sub Total : 0"
                         android:gravity="end"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:visibility="gone"
+                        android:textColor="@color/colorBlack"
                         android:textStyle="bold"/>
                 </LinearLayout>
                 <LinearLayout
@@ -119,9 +157,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
+                        android:id="@+id/tvReceiptDiscountTitle"
                         android:textColor="@color/colorBlack"
                         android:text="Discount:"/>
 
@@ -131,8 +170,33 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptDiscount"
                         android:gravity="end"
-                        android:padding="14sp"
-                        android:textSize="16sp"/>
+                        android:padding="5dp"
+                        android:textSize="14sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:padding="5dp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:id="@+id/tvReceiptTaxTitle"
+                        android:textColor="@color/colorBlack"
+                        android:text="Tax:"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:id="@+id/tvReceiptTax"
+                        android:gravity="end"
+                        android:padding="5dp"
+                        android:textSize="14sp"/>
                 </LinearLayout>
 
 
@@ -144,7 +208,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:textColor="@color/colorBlack"
@@ -156,8 +220,9 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptTotal"
                         android:gravity="end"
-                        android:padding="10dp"
-                        android:textSize="14sp"
+                        android:padding="5dp"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
                         android:textColor="@color/colorBlack"/>
 
                 </LinearLayout>
@@ -177,7 +242,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:textColor="@color/colorBlack"
@@ -189,8 +254,8 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptAmountReceived"
                         android:gravity="end"
-                        android:padding="10dp"
-                        android:textSize="14sp"
+                        android:padding="5dp"
+                        android:textSize="16sp"
                         android:textColor="@color/colorBlack"/>
 
                 </LinearLayout>
@@ -203,7 +268,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:textColor="@color/colorBlack"
@@ -216,7 +281,7 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptChanges"
                         android:gravity="end"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:textColor="@color/colorBlack"/>
