--- a/app/src/main/res/layout/row_transaction.xml
+++ b/app/src/main/res/layout/row_transaction.xml
@@ -1,66 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="5dp">
+    android:elevation="5dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="5dp">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="Rp 10.000"
-            android:id="@+id/tvRowTransactionTotalPrice"/>
+        <ImageView
+            android:layout_width="25sp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="5dp"
+            android:layout_height="match_parent"
+            android:id="@+id/ivRowTransactionStatus"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/layoutRowTransactionCustomer"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/user"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:orientation="vertical">
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="Rp 10.000"
+                android:id="@+id/tvRowTransactionTotalPrice"/>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Customer"
-                android:id="@+id/tvRowTransactionCustomer"/>
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:id="@+id/layoutRowTransactionCustomer"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/user"
+                    android:id="@+id/ivRowTransactionCustomer"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Customer"
+                    android:id="@+id/tvRowTransactionCustomer"/>
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="25 July 2020"
-            android:gravity="end"
-            android:id="@+id/tvRowTransactionDate"/>
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="#0"
-            android:gravity="end"
-            android:id="@+id/tvRowTransactionCode"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="25 July 2020"
+                android:gravity="end"
+                android:id="@+id/tvRowTransactionDate"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="#0"
+                android:gravity="end"
+                android:id="@+id/tvRowTransactionCode"/>
+        </LinearLayout>
+
+
     </LinearLayout>
-
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
