--- a/app/src/main/res/layout/activity_new_merchant.xml
+++ b/app/src/main/res/layout/activity_new_merchant.xml
@@ -9,25 +9,69 @@
     android:padding="20sp"
     tools:context=".merchant.NewMerchantActivity">
 
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Set Up Your First Merchant"
-        android:textSize="24sp"
-        android:textColor="@color/colorBlack"
-        android:gravity="center"
-        android:id="@+id/tvNewMerchant"/>
+        android:elevation="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Merchant Name"
-        android:id="@+id/etNewMerchant"
-        android:layout_marginVertical="20dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Set Up Your First Merchant"
+                android:textSize="24sp"
+                android:textColor="@color/colorBlack"
+                android:layout_marginBottom="30dp"
+                android:gravity="center"
+                android:id="@+id/tvNewMerchant"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnNewMerchant"
-        android:text="Set Up Merchant"/>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etMerchantName"
+                    android:hint="Merchant Name"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etMerchantBusinessInfo"
+                    android:hint="Business Info"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etMerchantAddress"
+                    android:hint="Address"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="No Telp"
+                android:id="@+id/etMerchantNoTelp"
+                android:layout_marginVertical="20dp"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnNewMerchant"
+                android:background="@drawable/button_border_fill"
+                android:text="Set Up Merchant"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
